[package]
name = "iso-env"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
fs_extra = "1.3.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
which = "7.0.2"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.0"
tempfile = "3.3"